--- a/cubos.html
+++ b/cubos.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <p>Seja a mudança que voce quer para o mundo! </p>
+    <p>Se supere , conquiste , faça , refaça, pense , repense, insista!</p>
 </body>
+
+<script></script>
 </html>
